# defi-bindings

./: Cargo.toml  README.md
aave-v3/: Cargo.toml  build.rs
aave-v3/src/contracts/: a_token.rs  aave_oracle.rs  aave_protocol_data_provider.rs  access_control.rs  acl_manager.rs  address.rs  admin_upgradeability_proxy.rs  aggregator_interface.rs  base_admin_upgradeability_proxy.rs  base_immutable_admin_upgradeability_proxy.rs  base_upgradeability_proxy.rs  borrow_logic.rs  bridge_logic.rs  calldata_logic.rs  configurator_input_types.rs  configurator_logic.rs  context.rs  data_types.rs  debt_token_base.rs  default_reserve_interest_rate_strategy.rs  delegation_aware_a_token.rs  e_mode_logic.rs  eip712_base.rs  erc165.rs  erc20.rs  errors.rs  flash_loan_logic.rs  flash_loan_receiver_base.rs  flash_loan_simple_receiver_base.rs  flashloan_attacker.rs  g_pv_2_safe_erc20.rs  generic_logic.rs  helpers.rs  i_aave_incentives_controller.rs  i_aave_oracle.rs  i_access_control.rs  i_credit_delegation_token.rs  i_delegation_token.rs  i_flash_loan_receiver.rs  i_flash_loan_simple_receiver.rs  (+87 more)
compound/: Cargo.toml  build.rs
compound/src/contracts/: c_dai_delegate.rs  c_delegate_interface.rs  c_delegation_storage.rs  c_delegator_interface.rs  c_erc_20.rs  c_erc_20_delegate.rs  c_erc_20_delegator.rs  c_erc_20_immutable.rs  c_erc_20_interface.rs  c_erc_20_storage.rs  c_ether.rs  c_token.rs  c_token_interface.rs  c_token_storage.rs  careful_math.rs  comp.rs  comp_interface.rs  compound_lens.rs  comptroller.rs  comptroller_error_reporter.rs  comptroller_g1.rs  comptroller_g2.rs  comptroller_g3.rs  comptroller_interface.rs  comptroller_lens_interface.rs  comptroller_v1_storage.rs  comptroller_v2_storage.rs  comptroller_v3_storage.rs  dai_interest_rate_model_v2.rs  dai_join_like.rs  eip20_interface.rs  eip20_non_standard_interface.rs  exponential.rs  gem_like.rs  governor_alpha.rs  interest_rate_model.rs  jug_like.rs  jump_rate_model.rs  maximillion.rs  mod.rs  (+14 more)
mape-loan/: Cargo.toml
mape-loan/artifacts/Borrower.sol/: Borrower.json
mape-loan/artifacts/DSTest.sol/: DSTest.json
mape-loan/artifacts/ERC20.sol/: ERC20.json
mape-loan/artifacts/ERC20Helper.sol/: ERC20Helper.json
mape-loan/artifacts/ERC20User.sol/: ERC20User.json
mape-loan/artifacts/Governor.sol/: Governor.json
mape-loan/artifacts/IDefaultImplementationBeacon.sol/: IDefaultImplementationBeacon.json
mape-loan/artifacts/IERC20.sol/: IERC20.json
mape-loan/artifacts/IERC20Like.sol/: IERC20Like.json
mape-loan/artifacts/IMapleLoan.sol/: IMapleLoan.json
mape-loan/src/: lib.rs
maple-loan/: build.rs  (+1 more)
template/: Cargo.toml  build.rs
template/src/: lib.rs
(+170 files in other folders)
