[package]
name = "defi-bindings"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "aave-v3",
    "compound",
    "mape-loan",
    "uniswap-v3-periphery",
]

[patch."https://github.com/gakonst/foundry"]
foundry-binder = { git = "https://github.com/mattsse/dapptools-rs", branch = "matt/add-foundry-binder" }