[package]
name = "aave-v3-bindings"
version = "0.1.0"
edition = "2021"
description = """
Rust bindings for https://github.com/aave/aave-v3-core
"""

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
serde_json = "1.0"

[build-dependencies]
foundry-binder = { git = "https://github.com/gakonst/foundry" }