[package]
name = "compound-bindings"
version = "0.1.0"
edition = "2021"
description = """
Rust bindings for https://github.com/compound-finance/compound-protocol
"""

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
serde_json = "1.0"

[build-dependencies]
foundry-binder = { git = "https://github.com/gakonst/foundry" }