[package]
name = "compound-bindings"
version = "0.2.0"
edition = "2021"
description = """
Rust bindings for https://github.com/compound-finance/compound-protocol
"""

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }

[build-dependencies]
foundry-binder = { git = "https://github.com/foundry-rs/foundry" }