[package]
name = "maple-loan-bindings"
version = "0.1.0"
edition = "2021"
description = """
Rust bindings for <https://github.com/maple-labs/loan>
"""

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
serde_json = "1.0"

[build-dependencies]
foundry-binder = { path = "../../foundry/binder" }
